--- a/72065.html
+++ b/72065.html
@@ -17,8 +17,7 @@
 <body>
 
 	<script>
-		//vaxInitParallax(1);
-		vaxInit({ antialias: true, alpha: true });
+		vaxInitParallax(1);
 
 		camera.position.set(0, 0, 0);
 		camera.lookAt(new THREE.Vector3(0, 0, 0));
